--- a/fast_stable_diffusion_AUTOMATIC1111.ipynb
+++ b/fast_stable_diffusion_AUTOMATIC1111.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/AshokPrjapati/AshokPrjapati/blob/main/fast_stable_diffusion_AUTOMATIC1111.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "47kV9o1Ni8GH"
       },
       "source": [
@@ -766,7 +756,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3e258edd-89de-49a1-ef24-82838e418920"
+        "outputId": "93683b8d-e199-4c91-def3-66cfe3b42df5"
       },
       "outputs": [
         {
@@ -774,17 +764,11 @@
           "name": "stdout",
           "text": [
             "ControlNet preprocessor location: /content/gdrive/MyDrive/sd/stable-diffusion-webui/extensions/sd-webui-controlnet/annotator/downloads\n",
-            "2025-07-07 05:56:13,343 - ControlNet - \u001b[0;32mINFO\u001b[0m - ControlNet v1.1.455\n",
+            "2025-07-07 06:11:42,941 - ControlNet - \u001b[0;32mINFO\u001b[0m - ControlNet v1.1.455\n",
             "Loading weights [31e35c80fc] from /content/gdrive/MyDrive/sd/stable-diffusion-webui/models/Stable-diffusion/sd_xl_base_1.0.safetensors\n",
-            "2025-07-07 05:56:15,636 - ControlNet - \u001b[0;32mINFO\u001b[0m - ControlNet UI callback registered.\n",
+            "2025-07-07 06:11:46,258 - ControlNet - \u001b[0;32mINFO\u001b[0m - ControlNet UI callback registered.\n",
             "Creating model from config: /content/gdrive/MyDrive/sd/stablediffusion/generative-models/configs/inference/sd_xl_base.yaml\n",
-            "Running on public URL: https://9e331dbbe8f50d4a86.gradio.live\n",
-            "\u001b[32m✔ Connected\n",
-            "Startup time: 23.0s (import torch: 6.7s, import gradio: 2.1s, setup paths: 1.9s, initialize shared: 0.3s, other imports: 1.1s, list SD models: 1.2s, load scripts: 3.4s, initialize extra networks: 0.2s, create ui: 2.7s, gradio launch: 2.5s, add APIs: 0.8s).\n",
-            "Loading weights [f47e942ad4] from /content/gdrive/MyDrive/sd/stable-diffusion-webui/models/Stable-diffusion/realisticVisionV60B1_v51HyperVAE.safetensors\n",
-            "Creating model from config: /content/gdrive/MyDrive/sd/stable-diffusion-webui/configs/v1-inference.yaml\n",
-            "Applying attention optimization: xformers... done.\n",
-            "loading stable diffusion model: RuntimeError\n",
+            "loading stable diffusion model: AttributeError\n",
             "Traceback (most recent call last):\n",
             "  File \"/usr/lib/python3.11/threading.py\", line 1002, in _bootstrap\n",
             "    self._bootstrap_inner()\n",
@@ -796,98 +780,52 @@
             "    shared.sd_model  # noqa: B018\n",
             "  File \"/content/gdrive/MyDrive/sd/stable-diffusion-webui/modules/shared_items.py\", line 175, in sd_model\n",
             "    return modules.sd_models.model_data.get_sd_model()\n",
-            "  File \"/content/gdrive/MyDrive/sd/stable-diffusion-webui/modules/sd_models.py\", line 693, in get_sd_model\n",
+            "  File \"/content/gdrive/MyDrive/sd/stable-diffusion-webui/modules/sd_models.py\", line 694, in get_sd_model\n",
             "    load_model()\n",
-            "  File \"/content/gdrive/MyDrive/sd/stable-diffusion-webui/modules/sd_models.py\", line 869, in load_model\n",
-            "    sd_model.cond_stage_model_empty_prompt = get_empty_cond(sd_model)\n",
-            "                                             ^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/content/gdrive/MyDrive/sd/stable-diffusion-webui/modules/sd_models.py\", line 728, in get_empty_cond\n",
-            "    d = sd_model.get_learned_conditioning([\"\"])\n",
-            "        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/content/gdrive/MyDrive/sd/stable-diffusion-webui/modules/sd_models_xl.py\", line 32, in get_learned_conditioning\n",
-            "    c = self.conditioner(sdxl_conds, force_zero_embeddings=['txt'] if force_zero_negative_prompt else [])\n",
-            "        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.11/dist-packages/torch/nn/modules/module.py\", line 1739, in _wrapped_call_impl\n",
-            "    return self._call_impl(*args, **kwargs)\n",
-            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.11/dist-packages/torch/nn/modules/module.py\", line 1750, in _call_impl\n",
-            "    return forward_call(*args, **kwargs)\n",
-            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/content/gdrive/MyDrive/sd/stablediffusion/generative-models/sgm/modules/encoders/modules.py\", line 141, in forward\n",
-            "    emb_out = embedder(batch[embedder.input_key])\n",
-            "              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.11/dist-packages/torch/nn/modules/module.py\", line 1739, in _wrapped_call_impl\n",
-            "    return self._call_impl(*args, **kwargs)\n",
-            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.11/dist-packages/torch/nn/modules/module.py\", line 1750, in _call_impl\n",
-            "    return forward_call(*args, **kwargs)\n",
-            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/content/gdrive/MyDrive/sd/stable-diffusion-webui/modules/sd_hijack_clip.py\", line 313, in forward\n",
-            "    return super().forward(texts)\n",
-            "           ^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/content/gdrive/MyDrive/sd/stable-diffusion-webui/modules/sd_hijack_clip.py\", line 227, in forward\n",
-            "    z = self.process_tokens(tokens, multipliers)\n",
-            "        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/content/gdrive/MyDrive/sd/stable-diffusion-webui/modules/sd_hijack_clip.py\", line 269, in process_tokens\n",
-            "    z = self.encode_with_transformers(tokens)\n",
-            "        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/content/gdrive/MyDrive/sd/stable-diffusion-webui/modules/sd_hijack_clip.py\", line 375, in encode_with_transformers\n",
-            "    outputs = self.wrapped.transformer(input_ids=tokens, output_hidden_states=self.wrapped.layer == \"hidden\")\n",
-            "              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.11/dist-packages/torch/nn/modules/module.py\", line 1739, in _wrapped_call_impl\n",
-            "    return self._call_impl(*args, **kwargs)\n",
-            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.11/dist-packages/torch/nn/modules/module.py\", line 1750, in _call_impl\n",
-            "    return forward_call(*args, **kwargs)\n",
-            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.11/dist-packages/transformers/models/clip/modeling_clip.py\", line 816, in forward\n",
-            "    return self.text_model(\n",
-            "           ^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.11/dist-packages/torch/nn/modules/module.py\", line 1739, in _wrapped_call_impl\n",
-            "    return self._call_impl(*args, **kwargs)\n",
-            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.11/dist-packages/torch/nn/modules/module.py\", line 1750, in _call_impl\n",
-            "    return forward_call(*args, **kwargs)\n",
-            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.11/dist-packages/transformers/models/clip/modeling_clip.py\", line 712, in forward\n",
-            "    hidden_states = self.embeddings(input_ids=input_ids, position_ids=position_ids)\n",
-            "                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.11/dist-packages/torch/nn/modules/module.py\", line 1739, in _wrapped_call_impl\n",
-            "    return self._call_impl(*args, **kwargs)\n",
-            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.11/dist-packages/torch/nn/modules/module.py\", line 1750, in _call_impl\n",
-            "    return forward_call(*args, **kwargs)\n",
-            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.11/dist-packages/transformers/models/clip/modeling_clip.py\", line 227, in forward\n",
-            "    inputs_embeds = self.token_embedding(input_ids)\n",
-            "                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.11/dist-packages/torch/nn/modules/module.py\", line 1739, in _wrapped_call_impl\n",
-            "    return self._call_impl(*args, **kwargs)\n",
-            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.11/dist-packages/torch/nn/modules/module.py\", line 1750, in _call_impl\n",
-            "    return forward_call(*args, **kwargs)\n",
-            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/content/gdrive/MyDrive/sd/stable-diffusion-webui/modules/sd_hijack.py\", line 351, in forward\n",
-            "    inputs_embeds = self.wrapped(input_ids)\n",
-            "                    ^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.11/dist-packages/torch/nn/modules/module.py\", line 1739, in _wrapped_call_impl\n",
-            "    return self._call_impl(*args, **kwargs)\n",
-            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.11/dist-packages/torch/nn/modules/module.py\", line 1750, in _call_impl\n",
-            "    return forward_call(*args, **kwargs)\n",
-            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.11/dist-packages/torch/nn/modules/sparse.py\", line 190, in forward\n",
-            "    return F.embedding(\n",
-            "           ^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.11/dist-packages/torch/nn/functional.py\", line 2551, in embedding\n",
-            "    return torch.embedding(weight, input, padding_idx, scale_grad_by_freq, sparse)\n",
-            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "RuntimeError: Expected all tensors to be on the same device, but found at least two devices, cpu and cuda:0! (when checking argument for argument index in method wrapper_CUDA__index_select)\n",
+            "  File \"/content/gdrive/MyDrive/sd/stable-diffusion-webui/modules/sd_models.py\", line 846, in load_model\n",
+            "    load_model_weights(sd_model, checkpoint_info, state_dict, timer)\n",
+            "  File \"/content/gdrive/MyDrive/sd/stable-diffusion-webui/modules/sd_models.py\", line 420, in load_model_weights\n",
+            "    model.cond_stage_model.to(\"cuda\")\n",
+            "    ^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/torch/nn/modules/module.py\", line 1928, in __getattr__\n",
+            "    raise AttributeError(\n",
+            "AttributeError: 'DiffusionEngine' object has no attribute 'cond_stage_model'\n",
             "\n",
             "\n",
             "Stable diffusion model failed to load\n",
             "Applying attention optimization: xformers... done.\n",
-            "Model loaded in 17.6s (create model: 1.0s, apply weights to model: 16.0s, load textual inversion embeddings: 0.1s, calculate empty prompt: 0.4s).\n"
+            "Running on public URL: https://0da034274a95e05eac.gradio.live\n",
+            "\u001b[32m✔ Connected\n",
+            "Startup time: 23.8s (import torch: 7.1s, import gradio: 2.5s, setup paths: 2.0s, initialize shared: 0.4s, other imports: 1.1s, list SD models: 1.8s, load scripts: 2.2s, initialize extra networks: 0.1s, create ui: 4.3s, gradio launch: 1.8s, add APIs: 0.4s).\n",
+            "Loading weights [31e35c80fc] from /content/gdrive/MyDrive/sd/stable-diffusion-webui/models/Stable-diffusion/sd_xl_base_1.0.safetensors\n",
+            "Creating model from config: /content/gdrive/MyDrive/sd/stablediffusion/generative-models/configs/inference/sd_xl_base.yaml\n",
+            "loading stable diffusion model: AttributeError\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/lib/python3.11/threading.py\", line 1002, in _bootstrap\n",
+            "    self._bootstrap_inner()\n",
+            "  File \"/usr/lib/python3.11/threading.py\", line 1045, in _bootstrap_inner\n",
+            "    self.run()\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/anyio/_backends/_asyncio.py\", line 867, in run\n",
+            "    result = context.run(func, *args)\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/gradio/utils.py\", line 707, in wrapper\n",
+            "    response = f(*args, **kwargs)\n",
+            "  File \"/content/gdrive/MyDrive/sd/stable-diffusion-webui/modules/ui.py\", line 1165, in <lambda>\n",
+            "    update_image_cfg_scale_visibility = lambda: gr.update(visible=shared.sd_model and shared.sd_model.cond_stage_key == \"edit\")\n",
+            "  File \"/content/gdrive/MyDrive/sd/stable-diffusion-webui/modules/shared_items.py\", line 175, in sd_model\n",
+            "    return modules.sd_models.model_data.get_sd_model()\n",
+            "  File \"/content/gdrive/MyDrive/sd/stable-diffusion-webui/modules/sd_models.py\", line 694, in get_sd_model\n",
+            "    load_model()\n",
+            "  File \"/content/gdrive/MyDrive/sd/stable-diffusion-webui/modules/sd_models.py\", line 846, in load_model\n",
+            "    load_model_weights(sd_model, checkpoint_info, state_dict, timer)\n",
+            "  File \"/content/gdrive/MyDrive/sd/stable-diffusion-webui/modules/sd_models.py\", line 420, in load_model_weights\n",
+            "    model.cond_stage_model.to(\"cuda\")\n",
+            "    ^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/torch/nn/modules/module.py\", line 1928, in __getattr__\n",
+            "    raise AttributeError(\n",
+            "AttributeError: 'DiffusionEngine' object has no attribute 'cond_stage_model'\n",
+            "\n",
+            "\n",
+            "Stable diffusion model failed to load\n"
           ]
         }
       ],
@@ -926,7 +864,8 @@
         "\n",
         "  # Inject model.half() and fix CPU→CUDA device error by forcing text encoder to GPU\n",
         "  !sed -i 's@shared.opts.data\\[\"sd_model_checkpoint\"] = checkpoint_info.title@shared.opts.data[\"sd_model_checkpoint\"] = checkpoint_info.title; model.half()@' modules/sd_models.py\n",
-        "  !sed -i '/shared.opts.data\\[\"sd_model_checkpoint\"] = checkpoint_info.title;/a\\    model.cond_stage_model.to(\"cuda\")' modules/sd_models.py\n",
+        "  !sed -i '/shared.opts.data\\[\"sd_model_checkpoint\"] = checkpoint_info.title;/a\\    \\n    if hasattr(model, \"cond_stage_model\"):\\n        model.cond_stage_model.to(\"cuda\")' modules/sd_models.py\n",
+        "\n",
         "\n",
         "  # Force model loading to CUDA device\n",
         "  !sed -i \"s@map_location='cpu'@map_location='cuda'@\" modules/extras.py\n",
@@ -986,8 +925,7 @@
     "accelerator": "GPU",
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "include_colab_link": true
+      "gpuType": "T4"
     },
     "kernelspec": {
       "display_name": "Python 3",
