--- a/fast_stable_diffusion_ComfyUI.ipynb
+++ b/fast_stable_diffusion_ComfyUI.ipynb
@@ -14,7 +14,6 @@
       "execution_count": 4,
       "metadata": {
         "id": "Y9EBc437WDOs",
-        "outputId": "63462dcb-b8b7-40fd-c1af-9a5ed3977c59",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 49,
@@ -23,7 +22,8 @@
             "9470ba9743314c24b25d30a1061947fa",
             "39678424143d4bd4bb3412a8f8328e36"
           ]
-        }
+        },
+        "outputId": "63462dcb-b8b7-40fd-c1af-9a5ed3977c59"
       },
       "outputs": [
         {
@@ -71,7 +71,6 @@
       "execution_count": 5,
       "metadata": {
         "id": "CFWtw-6EPrKi",
-        "outputId": "e2b05bbf-efe0-45a9-f3ef-1f185f16a25b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 49,
@@ -80,7 +79,8 @@
             "991a5b29554145f98279401b47d05161",
             "e7cb8debe5c34165b697c24fc5eec286"
           ]
-        }
+        },
+        "outputId": "e2b05bbf-efe0-45a9-f3ef-1f185f16a25b"
       },
       "outputs": [
         {
@@ -154,7 +154,6 @@
       "metadata": {
         "cellView": "form",
         "id": "ZGV_5H4xrOSp",
-        "outputId": "413ddbb2-19f5-4975-9806-535961aa0645",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 49,
@@ -163,7 +162,8 @@
             "7d2fc76439664b83a047c44f4d7c0ec4",
             "97f5a4bec5e1499ab303800e639bdd26"
           ]
-        }
+        },
+        "outputId": "413ddbb2-19f5-4975-9806-535961aa0645"
       },
       "outputs": [
         {
@@ -227,7 +227,6 @@
       "execution_count": 7,
       "metadata": {
         "id": "p4wj_txjP3TC",
-        "outputId": "6c07c575-5ec0-4fe9-b61c-ce79e9537126",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 49,
@@ -236,7 +235,8 @@
             "03a55b54f481430ba1266f2abd728a11",
             "4bbaa90ed36e4680873e8bd8d77f1263"
           ]
-        }
+        },
+        "outputId": "6c07c575-5ec0-4fe9-b61c-ce79e9537126"
       },
       "outputs": [
         {
@@ -434,7 +434,6 @@
       "metadata": {
         "cellView": "form",
         "id": "Svx6Hx0iUPd1",
-        "outputId": "428d3258-d5f7-47f8-a41b-94a6d773ced9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 49,
@@ -443,7 +442,8 @@
             "d26079b9634a4d69ba99153854e39c40",
             "fbce2b4fce3548ff86f11a9d6e12d73b"
           ]
-        }
+        },
+        "outputId": "428d3258-d5f7-47f8-a41b-94a6d773ced9"
       },
       "outputs": [
         {
@@ -512,10 +512,10 @@
       "metadata": {
         "cellView": "form",
         "id": "PjzwxTkPSPHf",
-        "outputId": "49130398-2ab4-445c-8c6a-87d2ebb08986",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "49130398-2ab4-445c-8c6a-87d2ebb08986"
       },
       "outputs": [
         {
@@ -553,7 +553,7 @@
         "from subprocess import call\n",
         "\n",
         "\n",
-        "Ngrok_Token = \"31aU83E31Ex4B0umS5PqHHGoAJd_3nrNszpLZgNtu5cgA1gyT\" #@param {type:\"string\"}\n",
+        "Ngrok_Token = \"\" #@param {type:\"string\"}\n",
         "\n",
         "#@markdown - Ngrok token must be entered to be able to run ComfyUI\n",
         "\n",
